# spring-pendulum

./: .clang-format  CMakeLists.txt  LICENSE  README.md  Shader.h  Solvers.h  main.cpp  pendulum.h  plot-test.cpp  shaders.h
mth/: mthdef.h  vec.h
